--- a/wdd330/week6/todo/styles.css
+++ b/wdd330/week6/todo/styles.css
@@ -46,8 +46,7 @@ label {
     justify-content: space-between;
 }
 #description {
-    padding: .5em;
-    width: 100%;
+    padding: .8em;
 }
 #add {
     width: 30%;
@@ -56,7 +55,7 @@ label {
 #add:hover, .filter:hover, .remove:hover {
     cursor: pointer;
 }
-/* this is magic */
+/* pure sorcery */
 input[type=checkbox]:checked + label.strikethrough {
     text-decoration: line-through;
 }
