--- a/wdd330/beehive/views/recipe.html
+++ b/wdd330/beehive/views/recipe.html
@@ -43,7 +43,7 @@
                         <legend>Ingredient</legend>
                         <span class="quantity">
                             <label for="amount1">Amount: </label> 
-                            <input id="amount" name="amount" type="number" required>
+                            <input id="amount" name="amount" type="number" m,in="0" required>
 
                             <label for="measure1">Measure: </label>  
                             <input list="measures" id="measure1" name="measure1" />
