--- a/wdd330/beehive/views/pantry.html
+++ b/wdd330/beehive/views/pantry.html
@@ -20,23 +20,33 @@
         <h1><a href="../">Home</a> / Pantry</h1>
         
         <form id="pantryItem" name="pantryItem" method="GET">
-            <label for="name">Item:</label> 
-            <input id="name" name="name" type="text" required>
+            <label for="food">Item:</label> 
+            <input id="food" name="food" type="text" required>
 
             <label for="quantity">Quantity:</label> 
             <input id="quantity" name="quantity" type="number" min="1" placeholder="Number of items" required>
+
+            <label for="type">Type</label>
+            <input list="types" id="type" name="type" />
+            <datalist id="types">
+                <option value="Grains">
+                <option value="Proteins">
+                <option value="Fats">
+            </datalist>   
 
             <fieldset>
                 <legend>Per container</legend>
                 <span class="quantity">
                     <label for="amount1">Amount: </label> 
-                    <input id="amount" name="amount" type="number" placeholder="How much" required>
+                    <input id="amount" name="amount" type="number" min="0" placeholder="How much" required>
 
                     <label for="measure">Measure: </label>  
                     <input list="measures" id="measure" name="measure">
                     <datalist id="measures" required></datalist>
                 </span>
             </fieldset>
+
+            <input id="lookupFoodData" type="button" value="Health Lookup">
 
             <input id="addPantryItem" type="button" value="Add Pantry Item">
         </form>
