--- a/wdd330/beehive/views/family.html
+++ b/wdd330/beehive/views/family.html
@@ -17,8 +17,11 @@
 </head>
 <body>
     <main>
-        <h1> <a href="../">Home</a> / Family</h1>
+        <h1><a href="../">Home</a> / Family</h1>
        
+        <div id="message"></div>
+
+        <div id="familyMemberDropDown"></div>
         <form id="familyMember" name="familyMember" method="GET">
             <label for="name">Name:</label> 
             <input id="name" name="name" type="text" pattern="[A-Za-z]" placeholder="family member name" required>
