--- a/wdd330/beehive/css/styles.css
+++ b/wdd330/beehive/css/styles.css
@@ -5,6 +5,13 @@
     https://css-tricks.com/better-form-inputs-for-better-mobile-user-experiences/
 */
 
+:root {
+    --lightgray: #efefef;
+    --blue: steelblue;
+    --white: #fff;
+    --black: rgba(0, 0, 0, 0.8);
+    --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
+}
 
 *, *:after, *:before {
 	box-sizing: border-box; /* include border & padding as part of height & width: https://developer.mozilla.org/en-US/docs/Web/CSS/box-sizing */
@@ -18,9 +25,14 @@ html {
 main {
     margin: 0 auto;
 }
+#message {
+    font-size: 2em;
+    margin-bottom: 1em;
+}
 section {
     border: 1px solid black;
     margin-bottom: .5em;
+    padding: 1em;
 }
 label {
     display: block;
@@ -76,14 +88,29 @@ input[type=button] {
 fieldset#sex label {
     margin-top: 0;
 }
-#familyData {
+
+/* TABLE */
+#tableData {
     width: 100%;
 }
-#familyData td {
+#tableData td {
     text-align: center;
 }
+.week td {
+    border: 1px solid black;
+    padding: 3em;
+    width: 14%;
+}
+/* family */
+fieldset#sex, .quantity {
+    display: flex;
+    margin-top: 1em;
+}
+#male, #female {
+    width: 10%;
+}
 
-/* Selects any valid <input> */
+/* VALID, INVALID */
 input:valid, textarea:valid {
     background-color: powderblue;
 }
@@ -92,6 +119,92 @@ input:invalid, textarea:invalid  {
     background-color: salmon;
 }
 
+.open {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/* MODAL
+https://webdesign.tutsplus.com/tutorials/how-to-build-flexible-modal-dialogs-with-html-css-and-javascript--cms-33500
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    background: var(--black);
+    cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.35s ease-in;
+  }
+  
+  .modal.is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .modal-dialog {
+    position: relative;
+    bmax-width: 800px;
+    min: width 800px;
+    width: 80%;
+    max-height: 80vh;
+    border-radius: 5px;
+    background: var(--white);
+    overflow: auto;
+    cursor: default;
+  }
+  
+  .modal-dialog > * {
+    padding: 1rem;
+  }
+  
+  .modal-header,
+  .modal-footer {
+    background: var(--lightgray);
+  }
+  
+  .modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .modal-header .closeModal {
+    font-size: 1.5rem;
+  }
+  
+  .modal p + p {
+    margin-top: 1rem;
+  }
+  
+  section.modal-content {
+      border: none;
+  }
+
+  /* FOOTER
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+  .page-footer {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+  }
+  
+  .page-footer span {
+    color: #e31b23;
+  }
+
+/* END MODAL
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+
 /* https://material.io/design/layout/responsive-layout-grid.html#breakpoints */
 /* tablet */
 @media only screen and (min-width: 600px) {
@@ -99,7 +212,18 @@ input:invalid, textarea:invalid  {
         background-color: blue;
     }
     main {
-        max-width: 30%;
+        max-width: 65%;
+    }
+    /* index */
+    #widgets {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    #controlButtons {
+        text-align: center;
+    }
+    .control {
+        width: 30%;
     }
 }
 /* laptop */
@@ -108,22 +232,13 @@ input:invalid, textarea:invalid  {
         background-color: green;
     }
     main {
-        max-width: 80%;
-    }
-
-    /* index */
-    #widgets {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-    /* family */
-    fieldset#sex, .quantity {
-        display: flex;
-    }
+        max-width: 50%;
+    }    
 }
 /* desktop */
 @media only screen and (min-width: 1200px) {
     html {
         background-color: yellow;
     }
+  
 }
