--- a/wdd330/beehive/views/recipe.html
+++ b/wdd330/beehive/views/recipe.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Recipe</title>
-    <meta name="description" content="Beehive food storage calculator">
+    <title>Cookbook</title>
+    <meta name="description" content="Manage recipes">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,10 +22,10 @@
         <div id="message"></div>
         
         <form id="recipe" name="recipe" method="GET">
-            <label for="name">Name:</label> 
-            <input id="name" name="name" type="text" required>
+            <label for="dish">Name</label> 
+            <input id="dish" name="dish" type="text" required>
 
-            <label for="instructions">Instructions:</label> 
+            <label for="instructions">Instructions</label> 
             <textarea id="instructions" name="instructions" required></textarea>
 
             <label for="type">Type</label>
@@ -36,29 +36,36 @@
                 <option value="Snack">
             </datalist>
 
-            <label for="serves">Serves:</label> 
+            <label for="serves">Serves</label> 
             <input id="serves" name="serves" type="number" min="1" required>
 
             <ul id="ingredients">
                 <li>
                     <fieldset>
                         <legend>Ingredient</legend>
+                        <label for="item1">Item</label>  
+                        <input id="item1" data-id="1" class="food" type="text" required>
                         <span class="quantity">
-                            <label for="amount1">Amount: </label> 
+                            <label for="amount1">Amount</label> 
                             <input id="amount1" name="amount1" type="number" min="0" required>
 
-                            <label for="measure1">Measure: </label>  
+                            <label for="measure1">Measure</label>  
                             <input id="measure1" list="measures" name="measure1" />
                             <datalist id="measures"></datalist>
                         </span>
-                        <label for="item1">Item:</label>  
-                        <input id="item1" data-id="1" class="food" type="text" required>
                     </fieldset>
                 </li>
             </ul>
+            <!--input id="lookupFood" type="button" value="Lookup Food"-->
+
             <input id="newIngredient" type="button" value="New Ingredient">
 
-            <input id="addRecipe" type="button" value="Add Recipe">
+            <input id="id" type="hidden">
+
+            <div id="controlButtons">
+                <input id="addRecipe" type="button" class="control" value="Add Recipe">
+                <input id="cancel" type="button" class="control" value="Cancel">
+            </div>
         </form>
         
     </main>
