--- a/treasure/css/styles.css
+++ b/treasure/css/styles.css
@@ -53,14 +53,16 @@ main h1 {
 /* Style for the container holding the text inputs */
 .locks {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
-    /* Style for the individual text inputs */
+/* Style for the individual text inputs */
 .locks input[type="text"] {
-    width: 125px; /* Adjust the width as needed */
+    width: 100%; /* Adjust the width as needed */
     height: 80px; /* Adjust the height as needed */
     padding: 10px; /* Adjust padding as needed for spacing inside the input */
+    margin: 5px;
     border: 1px solid #ccc; /* Border style */
     border-radius: 5px; /* Rounded corners */
     font-size: 3em;
@@ -70,6 +72,7 @@ main h1 {
     width: 150px; /* Adjust the width as needed */
     height: 103px; /* Adjust the height as needed */
     padding: 10px; /* Adjust padding as needed for spacing inside the input */
+    margin: 5px;
     border: 1px solid #ccc; /* Border style */
     border-radius: 5px; /* Rounded corners */
     font-size: 3em;
@@ -109,7 +112,6 @@ main h1 {
 #grit {
     background-color:violet;
 }
-
 
 .overlay {
     display: none;
@@ -242,4 +244,12 @@ main h1 {
         2.5% 8.6%,
         1.1% 5.5%
     );
+}
+
+/* Media query for responsiveness */
+@media (max-width: 768px) {
+    .locks {
+      flex-direction: column; /* Stack inputs vertically on smaller screens */
+      text-align: center; /* Center-align text within the inputs */
+    }
 }
